<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GRE Mnemonics</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="gre_mnemonics">GRE Mnemonics</string>
    <string name="go_forward">Go Forward</string>
    <string name="go_backward">Go Backward</string>
    <string name="noidea">NoIdea</string>
    <string name="fair">Fair</string>
    <string name="good">Good</string>
    <string name="verygood">VeryGood</string>
    <string name="excellent">Excellent</string>
    <string name="v_good">V Good</string>
    <string name="no_idea">No Idea</string>
    <string name="meaning_sentence">Meaning|Sentence</string>
    <string name="mnemonic">Mnemonic</string>
    <string name="word">Word</string>
    <string name="wordlist">WordList</string>
    <string name="stats">Stats</string>
    <string name="settings">Settings</string>
    <string name="randomize">Randomize</string>
    <string name="logo">Logo</string>
    <string name="homescreen">HomeScreen</string>
    <string name="reset">Reset</string>
    <string name="_viewed_">"         Viewed    "</string>
    <string name="all_words">All Words</string>
    <string name="_1_100_words">1-100 Words</string>
    <string name="_100_200_words">100-200 Words</string>
    <string name="_200_300_words">200-300 Words</string>
    <string name="_300_400_words">300-400 Words</string>
    <string name="_400_500_words">400-500 Words</string>
    <string name="_500_600_words">500-600 Words</string>
    <string name="_600_700_words">600-700 words</string>
    <string name="_700_800_words">700-800 Words</string>
    <string name="_900_1000_words">900-1000 Words</string>
    <string name="_800to900_words">800to900 Words</string>
    <string name="non_viewed_words">Non Viewed Words</string>
    <string name="words_no_idea">Words - No Idea</string>
    <string name="words_fair">Words - Fair</string>
    <string name="words_good">Words - Good</string>
    <string name="words_very_good">Words - Very Good</string>
    <string name="words_excellent">Words - Excellent</string>
    <string name="_count_">"   Count :  "</string>
    <string name="name">Name</string>
    <string name="rating">Rating</string>
    <string name="survey_given_">Survey Given:</string>
    <string name="survey">Survey</string>
    <string name="prep_progress_indicator">Prep Progress Indicator</string>
    <string name="prep_indicator">Prep Indicator</string>
    <string name="preparation_progress_indicator">Preparation Progress Indicator</string>
    <string name="survey_taken">Survey Taken</string>
    <string name="survey_status">Survey Status</string>
    <string name="link_for_further_vocab_materials">Link For Further Vocab Materials</string>
    <string name="like_us_">Like Us @</string>
    <string name="educational_status">Educational Status</string>
    <string name="for_profile_evaluations">For Profile Evaluations</string>
    <string name="for_univs_shortlisting">For Universities Shortlisting</string>
    <string name="for_pre_exam_tips">For Pre Exam Tips</string>
    <string name="for_visa_enquiries">For Visa Enquiries</string>
    <string name="comments">Comments</string>
    <string name="enter_your_comments_here">Enter your comments here</string>
    <string name="submit_survey">Submit Survey</string>
    <string name="home">HOME</string>
    <string name="get_your_uid">Get Your UID</string>
    <string name="reset_db">Reset DB</string>
    <string name="reset_database">RESET Database</string>
    <string name="loading_database">Loading Database</string>
    <string name="db_load">DB Load</string>
    <string name="loading_stats">Loading Stats</string>

</resources>
