<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BlanchedAlmond"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context=".Survey" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/Black"
            android:textStyle="bold|italic"
            android:typeface="serif" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" >
        </EditText>
    </LinearLayout>

    <TextView
        android:id="@+id/tvEducationalStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/educational_status"
        android:textColor="@color/Black"
        android:textStyle="bold|italic"
        android:typeface="serif" />

    <Spinner
        android:id="@+id/spEducationalStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rating"
        android:textColor="@color/Black"
        android:textStyle="bold|italic"
        android:typeface="serif" />

    <RatingBar
        android:id="@+id/rbReview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvComments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comments"
            android:textColor="@color/Black"
            android:textStyle="bold|italic"
            android:typeface="serif" />

        <EditText
            android:id="@+id/etComments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="15"
            android:hint="@string/enter_your_comments_here"
            android:inputType="textMultiLine"
            android:lines="5"
            android:minLines="3"
            android:textIsSelectable="false"
            android:typeface="sans" 
            android:fontFamily="Arial"/>
    </LinearLayout>

    <ImageButton
        android:id="@+id/ibnSubmitSurvey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/submitsurveyicon"
        android:contentDescription="@string/submit_survey"/>

</LinearLayout>