<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BlanchedAlmond"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context=".DisplayItems" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:orientation="horizontal" >

        <SearchView
            android:id="@+id/svWordSearch"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.8"
            android:iconifiedByDefault="true"
            android:inputType="text"
            android:queryHint="Search" >
        </SearchView>

        <ImageButton
            android:id="@+id/ibnHome"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:contentDescription="@string/home"
            android:src="@drawable/homebtn" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/pbStatusIndicator"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.05"
        android:max="100"
        android:progress="5" />

    <ListView
        android:id="@+id/lvDynamicWords"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7" >
    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.05"
        android:orientation="horizontal"
        android:weightSum="1" >

        <ImageButton
            android:id="@+id/ibnRandomise"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:background="@color/Aquamarine"
            android:contentDescription="@string/randomize"
            android:src="@drawable/randomcon" />

        <ImageButton
            android:id="@+id/ibnListIcon"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:background="@color/Aquamarine"
            android:contentDescription="@string/wordlist"
            android:src="@drawable/listicon" />

        <ImageButton
            android:id="@+id/ibnStatsIcon"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:background="@color/Aquamarine"
            android:contentDescription="@string/stats"
            android:src="@drawable/statsicon" />

        <ImageButton
            android:id="@+id/ibnSettings"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:background="@color/Aquamarine"
            android:contentDescription="@string/settings"
            android:src="@drawable/settings" />
    </LinearLayout>

</LinearLayout>