<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BlanchedAlmond"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context=".Stats" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.9"
        android:orientation="horizontal" >

        <TabHost
            android:id="@+id/thStats"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <TabWidget
                    android:id="@android:id/tabs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >
                </TabWidget>

                <FrameLayout
                    android:id="@android:id/tabcontent"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <LinearLayout
                        android:id="@+id/lvStatLoader"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:weightSum="1" >

                        <TextView
                            android:id="@+id/tvStatLoader"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_gravity="center"
                            android:layout_weight="0.35"
                            android:gravity="center"
                            android:text="@string/loading_stats"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textColor="@color/White" />

                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_weight="0.15" />

                        <ProgressBar
                            android:id="@+id/pbLoader"
                            style="?android:attr/progressBarStyle"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="0.3" />
                    </LinearLayout>
                    <!--
                     <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:weightSum="1" >
                        </LinearLayout>
                    -->

                    <ScrollView
                        android:id="@+id/tbOrderByStatus"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" >
                    </ScrollView>
                </FrameLayout>
            </LinearLayout>
        </TabHost>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/ibnRandomise"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:background="@color/Aquamarine"
            android:contentDescription="@string/randomize"
            android:src="@drawable/randomcon" />

        <ImageButton
            android:id="@+id/ibnListIcon"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:background="@color/Aquamarine"
            android:contentDescription="@string/wordlist"
            android:src="@drawable/listicon" />

        <ImageButton
            android:id="@+id/ibnStatsIcon"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:background="@color/Aquamarine"
            android:contentDescription="@string/stats"
            android:src="@drawable/statsicon" />

        <ImageButton
            android:id="@+id/ibnSettings"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:background="@color/Aquamarine"
            android:contentDescription="@string/settings"
            android:src="@drawable/settings" />
    </LinearLayout>

</LinearLayout>